# Library-Management-V2

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
library_management/: __init__.py  hooks.py
library_management/config/: desktop.py
library_management/library_management/: api.py  utils.py
library_management/library_management/doctype/book/: book.json  book.py  test_book.py
library_management/library_management/doctype/loan/: loan.json  loan.py
library_management/library_management/doctype/member/: member.json  member.py
library_management/public/css/: library_management.css
library_management/public/js/: library_management.js  loan.js
library_management/setup/: install.py
library_management/www/: library_member_portal.html  library_member_portal.py
