[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "library_management"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dynamic = ["version", "description"]
readme = "README.md"
dependencies = []

[tool.bench.dev-dependencies]
